# quote-engine

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: django.yml  vuejs.yml
quote-ai-local/: README.md  package-lock.json  package.json
quote-ai-local/src/: index.ts  prediction.ts  server.ts
quote-ai-local/src/scripts/: list-models.ts
quote-client/: .env.example  .gitignore  README.md  package-lock.json  package.json
quote-client/cypress/e2e/: appRoot.cy.ts
quote-client/src/: App.vue  types.ts
quote-client/src/api/: characters.ts  fetcher.ts  quotes.ts  transformer.ts
quote-client/src/assets/: base.css
quote-client/src/components/: AppTitle.vue  QuoteItem.vue  QuoteList.vue
quote-client/src/components/__tests__/: TopApp.spec.ts
quote-client/src/components/icons/: IconClose.vue
webservice/: README.md  pyproject.toml  scripts.py
webservice/api/: admin.py  models.py  router.py  serializers.py  tests.py
webservice/api/migrations/: 0001_initial.py  0002_initial_characters.py  0003_quote.py
webservice/api/views/: character.py  quote.py  user_management.py
webservice/client/: views.py
webservice/webservice/: settings.py  urls.py
