[tool.poetry]
name = "quote-web-service"
version = "0.1.0"
description = "Simple example webservice for fetching quotes"
authors = ["Ruurd Moelker"]
readme = "README.md"
packages = [{include = "quote_web_service"}]

[tool.poetry.dependencies]
python = "3.12.1"
Django = "^5.0.6"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
